# setup.cfg, this can be transferred completely to pyproject.toml
# once upgraded to ubuntu 24


[metadata]
name = pbt
version = 0.0.0
description = Package Build Tools
author = Jordan Garcia
author_email = j.joseph_g@yahoo.com

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires = argcomplete

[options.packages.find]
where = src
